# Sound_Guard

./: CMakeLists.txt  Makefile  README.md  colab_test.ipynb  project_structure.txt  soundguard_pres.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: Project_Chart.md
include/: adc.h  audio.h  config.h  lcd.h  timing.h
src/: adc.c  audio.c  lcd.c  main.c  timing.c
tests/: diagnostic_main.c
